AD-WS: fix layout on codemirror is too big

--- a/admin/website/styles/layout.css
+++ b/admin/website/styles/layout.css
@@ -35,7 +35,7 @@
 
 .CodeMirror {
     height: 700px;
-    width: 5000px;
+    width: 800px;
     padding-top: 10px;
     padding-bottom: 10px;
 }
